# 3dMapping

./: CMakeLists.txt  main.cpp
coordinates/: file1.txt  file2.txt
